2003-03-04  Roland McGrath  <roland@redhat.com>

	* sysdeps/powerpc/powerpc64/dl-machine.h: Include <dl-tls.h>.
	(elf_machine_rela): Always use RESOLVE_MAP, needed for
	R_PPC64_JMP_SLOT as well as TLS cases.
	(BIT_INSERT): Move parenthesis where it ought to have been.
	Reported by Steven Munroe <sjmunroe@us.ibm.com>.

	* posix/confstr.c (confstr): Correct STRING_LEN values for
	_CS_GNU_LIBC_VERSION and _CS_GNU_LIBPTHREAD_VERSION, add missing
	break.  Reported by Alexandre Julliard <julliard@winehq.com>.

2003-03-04  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ia64/fpu/libm-test-ulps: Regenerated.

2003-03-04  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/clone.S: Add support for the new
	clone parameters.

	* po/sv.po: Update from translation team.

2003-03-04  Andreas Jaeger  <aj@suse.de>
	    Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/sysdep.h: Fix comments.

2003-03-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-sysdep.h: Add double include protection.

	* po/tr.po: Update from translation team.

	* elf/dl-load.c (_dl_map_object_from_fd): Determine whether there
	are holes between the segments.  Only call mprotect to set
	proection to PROT_NONE if there are some.

	* elf/dl-load.c (struct filebuf): Actually use FILEBUF_SIZE.
	Update comment.

	* include/sched.h (__clone2): Use ... instead of adding all the
	new parameters.

2003-03-03  Roland McGrath  <roland@redhat.com>

	* elf/dl-load.c (struct filebuf): Fix typo in last change.

	* sysdeps/powerpc/powerpc32/elf/configure.in: Don't define
	PI_STATIC_AND_HIDDEN.

2003-03-03  Ian Wienand  <ianw@gelato.unsw.edu.au>

	* sysdeps/unix/sysv/linux/ia64/clone2.S: Update to take extra clone
	flags.
	* include/sched.h: Update clone2 prototype.

2003-03-03  Andreas Jaeger  <aj@suse.de>

	* math/tgmath.h (__TGMATH_UNARY_REAL_RET_ONLY): New definition.
	(llrint): Use it to correct return type.
	(lrint): Likewise.
	(lround): Likewise.